ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ingress
  namespace: codescoring
spec:
  ingressClassName: nginx
  rules:
    - host: codescoring.k8s.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
            path: /
